libavc1394 ChangeLog

2005-07-02 Dan Dennedy <dan@dennedy.org>
	* libavc1394/avc1394_internal.[hc], libavc1394/avc1394_simple.[hc],
	  libavc1394/avc1349_vcr.c, test/dvcont.c: remove global variables used
	  for FCP/AVC transactions, which helps prevent the host order byte swapped
	  data from being overwritten; adjust the locations of start/stop FCP in
	  in order to minimize chance of overlapping responses.
	* libavc1394/avc1394_vcr.c: return error when timecode is all 0xffffffff.

0.5.1 release

2005-06-13 Dan Dennedy <dan@dennedy.org>
	* libavc1394/avc1394_simple.c: bugfix avc1394_send_command_block not
	  idempotent.
	* libavc1394/avc1394_simple.[hc]: added decode_ctype and additional debug.
	* various: indentation cleanup.

2005-05-24 Dan Dennedy <dan@dennedy.org>
	* avc1394_simple.c, avc1394_internal.c: apply patch from Pieter Palmers to 
	fix incorrect fcp response length handling and subsequent endian conversion.

0.5.0 release

2005-02-17  Dan Dennedy <dan@dennedy.org>
	* added spec and pkg-config support files
	* added tests/mkrfc2734.1 man page
	* fix compilation warnings and installation of pc file 

2005-01-25  Dan Dennedy <dan@dennedy.org>
	* convert build to use pkg-config for libraw1394
	* common/raw1394util.c: remove support for libraw1394 0.8
	* remove libplug1394 and test/plugreport and test/plugctl
	  (these are now available in libiec61883)

2005-01-10  Dan Dennedy <dan@dennedy.org>
	* libavc1394/avc1394.h: applied patch from Daniel Wagner
	  <wagi@monom.org> to fix AVC1394_GET_RESPONSE_OPERAND and add
	  constants for more subunit types and subunit_music capabilities.
	* test/dvcont.1: added man page missing in CVS!
	  
2004-07-10  Dan Dennedy <dan@dennedy.org>
	* libavc1394/avc1394_vcr.c: added avc1394_vcr_get_timecode2() that uses
	  an out param.
	* test/dvcont.c: modified to use avc1394_vcr_get_timecode2()

2004-07-09  Dan Dennedy <dan@dennedy.org>
	* libavc1394/avc1394_simple.c: fix retry parameter of transactions.
